1.3.4
	+ tableInfo returns an array of hash refs
1.1.41
	+ bugfix: Allow unsafe characters in smtp auth password
1.1.30
	+ SMTP and POP/iMAP certificates can be changed via  the CA module
1.1.20
	+ UI improvement: hide and show mail filter fields depending on the
	configuration
1.1.10
	+ New release
1.1
	+ Replaced courier with dovecot
	+ Added aliases for whole domains
	+ Use the new row() and ids() API
	+ Bugfix: alias are deleted when user account is deleted
	+ Bugfix: when already exists the maildir, create a new account is
	not allowed
	+ Bugfix: fixed error in mail queue template: avoid to reference a
	possible udefined value
	+ Bugfix: running method in Greylist does not fail if there is not
	eventd fil
	+ Bugfix: force removal of previous data in backup
	+Bugfix: removed bad suprefluous call that was the source of
	, at least, restore errors
	+ Mailqueque parsing error fixed and more robust mailqueue template
0.12.101
	+ Bugfix: Postgrey daemon is disabled by default
0.12.100
	+ EBox::MailUserLdap::userAccount and
	EBox::MailUserLdap::getUserLdapValue  dont longer assumme that the
	user exists
	+ Bugfix: MDSize attribute should not be restored in sytems with
	MDSize feature disabled
	+ Bugfix in logs: mail relayed to external smarthost is now
	logged, external smarthost relay denied action also logged, relay
	field now only logs relay data and no unrelated data
	+ Summary changed to reflect the changes in mailfilter module
	+ Added greylist support
	+ Added authentication for external smarthost
	+ Added TLS support for external smarthost
	+ Replaced courier with dovecot
	+ Simpler interface to choose mail retrieval protocols
0.12.99
	+ Add support for reporting
0.12.2
	+ Bugfix: Start POP3 over SSL (Port: 995)
0.12.1
	+ Bugfix: Use EBox::Types::Union::Text for unlimited message size
0.12
	+ Bugfix: Checkbox for unlimited size is unchecked, the field
	mentioned, i.e. Size (MB) is activated.
	+ Use the new MVC framework