@@ -1,3 +1,6 @@
+HEAD
+        + now you can specify a port for the smarthost (if not specified
+	the defualt port ocntinues to be 25)
 1.3.4
 	+ tableInfo returns an array of hash refs
 1.1.41
